--- a/src/Components/Inicio.css
+++ b/src/Components/Inicio.css
@@ -1,8 +1,3 @@
-#inicio {
-    background-color: var(--theme-background-color);
-    color: var(--neutral-100);
-}
-
 .PanelesInicio {
     display: flex;
     flex-flow: row wrap;
@@ -23,4 +18,21 @@
     border-radius: 5px;
     padding: 5px;
     width: 250px;
+}
+
+.img {
+    width: 100%;
+    height: 700px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: linear-gradient(to bottom, #ff000000, rgb(63, 62, 62)), url(/img.jpg);
+    background-position: 10% 42%;
+    display: block;
+    color: white;
+    text-align: left;
+}
+.img_text {
+    margin-top: 250px;
+    padding-left: 100px;
+    font-size: 1.3rem;
 }
