--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -6,12 +6,11 @@
     padding: 2px 0px;
     width: 100%;
     height: 6vh;
-    background-color: var(--neutral-900);
 }
 
 .nav-link{
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 .nav-item {
