--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,22 +1,22 @@
-.navbar{
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: center;
-    padding: 2px 0px;
+.navbar {
     width: 100%;
-    height: 6vh;
 }
 
-.nav-link{
+.nav-link-section {
+    height: 60px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+    margin-right: 30px;
+}
+
+.nav-link {
     text-decoration: none;
     color: black;
+    font-weight: bold;
 }
 
-.nav-item {
-    margin: 0 10px;
-}
-
-.nav-link-section{
-    margin-right: 10px;
+.logo {
+    font-size: 40px;
 }
