--- a/src/Components/Registro.css
+++ b/src/Components/Registro.css
@@ -131,3 +131,32 @@ input[type="Submit"]:hover {
   width: 100vw;
   height: 25vh;
 }
+
+.Titulo_registro {
+  color: #dfcdc3;
+}
+
+.btn-registro {
+  font-family: 'Overpass', sans-serif;
+  font-size: 110%;
+  color: #1b262c;
+  width: 100%;
+  height: 40px;
+  border: none;
+
+  border-radius: 3px 3px 3px 3px;
+  -moz-border-radius: 3px 3px 3px 3px;
+  -webkit-border-radius: 3px 3px 3px 3px;
+
+  background-color: #dfcdc3;
+
+  margin-top: 10px;
+}
+
+.signup_link {
+  color: #dfcdc3;
+}
+
+.signup_link a {
+  color: #dfcdc3;
+}
