--- a/src/Components/Consultas.css
+++ b/src/Components/Consultas.css
@@ -13,8 +13,9 @@
 .form-control {
     width: 40%;
     border: 1px solid black;
-    border-radius: 2px;
+    border-radius: 10px;
     font-size: 1.1rem;
+    padding: 10px;
 }
 
 .form-group {
