--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -1,8 +1,8 @@
 .nav-link-section {
     height: 60px;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
+    margin-left: auto;
     gap: 20px;
     margin-right: 30px;
 }
@@ -65,6 +65,6 @@
 .huellitas {
     display: flex;
     align-items: center;
+    margin-right: auto;
     margin-left: 45px;
-    justify-content: flex-start;
 }
