se agrega quienes somos

--- a/src/Components/Publico/QuienesSomos.css
+++ b/src/Components/Publico/QuienesSomos.css
@@ -2,7 +2,9 @@
 
 .txt{
     margin-top: 550px;
+    padding-top: 80px;
     padding-left: 100px;
+    padding-right: 55px;
     font-size: 1.3rem;
     width: 170%;
     height: 800px;
@@ -10,7 +12,7 @@
     font-family: 'Overpass', sans-serif;
     font-weight: bold;
     /* color: rgb(93, 91, 91);  */
-    color: rgb(114, 112, 112);
+    color: rgb(68, 66, 66);
 }
 
 .pa{
@@ -20,22 +22,22 @@
     font-family: 'Overpass', sans-serif;
     text-align: left;
     font-weight: bold;
-    color: rgb(117, 114, 114);
+    color: whitesmoke   
 
 }
 
 .txt2{
  
-    margin-top: 550px;
-    padding-left: 700px;
+    margin-top: 550px;;
+    padding-bottom: 280px;
     width: 250%;
     height: 200px;
     font-size: 1.3rem;
     line-height: 1.5;
     text-align: left;
-    font-weight: bold;
     font-family: 'Overpass', sans-serif;
-    color: rgb(117, 114, 114);
+    font-weight: bold;
+    color: rgb(47, 45, 45);
 }
 
 
@@ -65,7 +67,7 @@
 .card{
     justify-content:space-between;
     border: 1px solid lightgray;
-    box-shadow: 2px 2px 8px 4px #d3d3d3d4;
+    box-shadow: 2px 2px 2px 2px #d3d3d3d4;
 }
 .logoblanco{
     height: 35px;
