Correcciones visuales adopcion

--- a/src/Components/Adopciones/Adopcion.css
+++ b/src/Components/Adopciones/Adopcion.css
@@ -1,12 +1,23 @@
 .volver {
   background-color: rgb(141, 65, 141);
-  border-radius:15px;
+  border-radius: 15px;
   padding: 10px;
   border: 1px solid lightgray;
   color: white;
   padding: 10px;
   margin: 10px;
 }
+
 .pieAdopcion {
   background-color: white;
+}
+
+.container_adopcion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tarjeta {
+  margin-top: 30px;
 }
