--- a/src/Components/Publico/QuienesSomos.css
+++ b/src/Components/Publico/QuienesSomos.css
@@ -1,6 +1,4 @@
-
-
-.txt{
+.txt {
     margin-top: 550px;
     padding-top: 80px;
     padding-left: 100px;
@@ -15,20 +13,20 @@
     color: rgb(68, 66, 66);
 }
 
-.pa{
+.pa {
     width: 100%;
     height: 350px;
     font-size: 1.3rem;
     font-family: 'Overpass', sans-serif;
     text-align: left;
     font-weight: bold;
-    color: whitesmoke   
-
+    color: whitesmoke
 }
 
-.txt2{
- 
-    margin-top: 550px;;
+.txt2 {
+
+    margin-top: 550px;
+    ;
     padding-bottom: 280px;
     width: 250%;
     height: 200px;
@@ -50,25 +48,28 @@
     display: center;
     align-items: center;
     margin-left: 35px;
-    
-    
+
+
 }
 
-.card-title{
+.card-title {
     font-family: 'Overpass', sans-serif;
     color: rgb(93, 91, 91);
     font-weight: bold;
 }
-.card-text{
+
+.card-text {
     font-family: 'Overpass', sans-serif;
     color: rgb(93, 91, 91);
-    
+
 }
-.card{
-    justify-content:space-between;
+
+.card {
+    justify-content: space-between;
     border: 1px solid lightgray;
     box-shadow: 2px 2px 2px 2px #d3d3d3d4;
 }
-.logoblanco{
+
+.logoblanco {
     height: 35px;
 }
