--- a/src/Components/Publico/Inicio.css
+++ b/src/Components/Publico/Inicio.css
@@ -25,7 +25,7 @@
     height: 1000px;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: linear-gradient(to bottom, #ff000000, rgb(63, 62, 62)), url(/img.jpg);
+    background-image: linear-gradient(to bottom, #ff000000, rgb(63, 62, 62)), url(../../assets/img/img.jpg);
     background-position: 10% 45%;
     display: block;
     color: white;
