--- a/src/Components/ManejoUsuarios/Login.css
+++ b/src/Components/ManejoUsuarios/Login.css
@@ -4,7 +4,6 @@ body {
     font-weight: normal;
     font-size: 100%;
     color: #1b262c;
-    
     margin: 0;
     background-color: #5f6769;
 }
@@ -14,12 +13,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
-    
+    height: 70vh;
     background-position: center;
     background-size: cover;
 }
@@ -28,26 +25,22 @@ body {
 #contenedorcentrado {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction:row;
-    
-    min-width: 380px;
-    max-width: 900px;
-    width: 90%;
-    
+    flex-direction: row;
+
+
     background-color: #5f6769;
-    
+
     /*opacity: 0.50;
     filter: alpha(opacity=50);*/
-    
+
     border-radius: 10px 10px 10px 10px;
     -moz-border-radius: 10px 10px 10px 10px;
     -webkit-border-radius: 10px 10px 10px 10px;
-    
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    
+
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+
     padding: 30px;
     box-sizing: border-box;
 }
@@ -60,17 +53,17 @@ body {
     min-width: 320px;
     padding: 30px 30px 50px 30px;
     background-color: #719192;
-    
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-    
+
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+
     border-radius: 3px 3px 3px 3px;
     -moz-border-radius: 3px 3px 3px 3px;
     -webkit-border-radius: 3px 3px 3px 3px;
-    
+
     box-sizing: border-box;
-    
+
     opacity: 1;
     filter: alpha(opacity=1);
 }
@@ -79,8 +72,8 @@ body {
     display: block;
     font-family: 'Overpass', sans-serif;
     font-size: 120%;
-    color:#3c4245;
-    
+    color: #3c4245;
+
     margin-top: 15px;
 }
 
@@ -88,16 +81,16 @@ body {
     font-family: 'Overpass', sans-serif;
     font-size: 110%;
     color: #1b262c;
-    
+
     display: block;
     width: 100%;
     height: 40px;
-    
+
     margin-bottom: 10px;
     padding: 5px 5px 5px 10px;
-    
+
     box-sizing: border-box;
-    
+
     border: none;
     border-radius: 3px 3px 3px 3px;
     -moz-border-radius: 3px 3px 3px 3px;
@@ -112,24 +105,25 @@ body {
 #login button {
     font-family: 'Overpass', sans-serif;
     font-size: 110%;
-    color:#1b262c;
+    color: #1b262c;
     width: 100%;
     height: 40px;
     border: none;
-    
+
     border-radius: 3px 3px 3px 3px;
     -moz-border-radius: 3px 3px 3px 3px;
     -webkit-border-radius: 3px 3px 3px 3px;
-    
+
     background-color: #dfcdc3;
-    
+
     margin-top: 10px;
 }
 
 #login button:hover {
     background-color: #3c4245;
-    color:#dfcdc3;
+    color: #dfcdc3;
 }
+
 /* formulario de login */
 
 /* seccion de la derecha */
@@ -138,20 +132,20 @@ body {
     /*display: flex;
     align-items:center;
     justify-content:center;*/
-    
+
     text-align: center;
     width: 100%;
-    
+
     opacity: 0.70;
     filter: alpha(opacity=70);
-    
-    padding:20px 20px 20px 50px;
+
+    padding: 20px 20px 20px 50px;
     box-sizing: border-box;
 }
 
 .titulo {
     font-size: 300%;
-    color:#dfcdc3;
+    color: #dfcdc3;
 }
 
 .logo-empresa img {
@@ -160,12 +154,13 @@ body {
 
 hr {
     border-top: 1px solid #8c8b8b;
-	border-bottom: 1px solid #dfcdc3;
-    
+    border-bottom: 1px solid #dfcdc3;
+
 }
+
 .pie-form {
     font-size: 90%;
-    text-align: center;    
+    text-align: center;
     margin-top: 15px;
 }
 
@@ -179,15 +174,15 @@ hr {
 .pie-form a:hover {
     color: #719192;
 }
+
 /* seccion de la derecha */
 
 
 
 /* ajustar a pantallas con ancho menor o igual a 775px; */
-@media all and (max-width: 775px)
-{
+@media all and (max-width: 775px) {
     #contenedorcentrado {
-        flex-direction:column-reverse;
+        flex-direction: column-reverse;
 
         min-width: 380px;
         max-width: 900px;
@@ -202,24 +197,25 @@ hr {
         -moz-border-radius: 10px 10px 10px 10px;
         -webkit-border-radius: 10px 10px 10px 10px;
 
-        -webkit-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-        -moz-box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
-        box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.15);
+        -webkit-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+        -moz-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
+        box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
 
         padding: 30px;
         box-sizing: border-box;
     }
-    
+
     #login {
         margin: 0 auto;
     }
-    
+
     #derecho {
-        padding:20px 20px 20px 20px;
+        padding: 20px 20px 20px 20px;
     }
-    
+
     #login label {
         text-align: left;
     }
 }
+
 /* ajustar a pantallas con ancho menor o igual a 775px; */
