--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,11 @@
   flex-direction: column;
   overflow: scroll;
 }
+
+#wrapper {
+  margin-top: 0;
+  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 5rem;
+}
