--- a/src/Components/Adopciones/Adopciones.css
+++ b/src/Components/Adopciones/Adopciones.css
@@ -1,6 +1,13 @@
-@charset "utf-8";
+.contenedor_adopciones {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 
 .tarjeta {
+  margin: 10px;
+  flex: 1 0 300px;
   display: flex;
   flex-direction: column;
   border: 1px solid lightgray;
@@ -9,8 +16,9 @@
   font-family: sans-serif;
   align-items: center;
   justify-content: center;
-  width: 500px;
   margin-bottom: 20px;
+  width: 300px;
+  height: 400px;
 }
 
 .titulo {
@@ -21,6 +29,10 @@
 
 .cuerpo {
   padding: 10px;
+}
+
+.cuerpo img {
+  height: 220px; /* Establece una altura fija para las imágenes */
 }
 
 .pie {
@@ -42,13 +54,6 @@
 
 .botones {
   margin: 30px;
-}
-
-.contenedor_adopciones {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .titulo_pagina {
