--- a/src/Components/Adopciones/Adopciones.css
+++ b/src/Components/Adopciones/Adopciones.css
@@ -18,7 +18,7 @@
   justify-content: center;
   margin-bottom: 20px;
   width: 300px;
-  height: 400px;
+  height: auto;
 }
 
 .titulo {
@@ -32,7 +32,8 @@
 }
 
 .cuerpo img {
-  height: 220px; /* Establece una altura fija para las imágenes */
+  height: 220px;
+  /* Establece una altura fija para las imágenes */
 }
 
 .pie {
