--- a/src/Components/Turnos/Calendario.css
+++ b/src/Components/Turnos/Calendario.css
@@ -17,3 +17,18 @@
 .dia-calendario.otro-mes{
     background-color: lightgray;
 }
+
+
+.btn-calendario{
+  width: 40px;
+  height: 30px;
+  border: none;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.btn-calendario:hover {
+    box-shadow: 3px 3px grey;
+}
