--- a/src/Components/Publico/Inicio.css
+++ b/src/Components/Publico/Inicio.css
@@ -1,26 +1,7 @@
-.PanelesInicio {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-self: center;
-    width: 50%;
-    gap: 50px;
-    margin-top: 50px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap');
 
-.Link {
-    text-decoration: none;
-    color: black;
-}
-
-.LinksContainer {
-    background-color: rgb(190, 239, 222);
-    border-radius: 5px;
-    padding: 5px;
-    width: 250px;
-}
-
-.img {
+.img_inicio {
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,14 +10,21 @@
     display: block;
     color: white;
     text-align: left;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.img_text {
-    margin-top: 250px;
+.img_text_inicio {
+    margin-top: 150px;
     padding-left: 100px;
     font-size: 1.3rem;
     width: 50%;
     height: 500px;
+}
+
+.titulo_inicio{
+    font-size: 4rem;
+    font-weight: bolder;
+    margin-bottom: 25px;
 }
 
 .especialidades {
@@ -45,36 +33,71 @@
     margin-bottom: 25px;
 }
 
-.int {
+.int{
     padding: 30px;
 }
+.int_img{
+    height: 253px;
+}
+.int_titulo{
+    font-size: 25.5px;
+    color: black;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
 
-.esp {
+.esp{
     padding: 30px;
-
+}
+.esp_img{
+    height: 230px;
+    margin-bottom: 24px;
+    padding-top: 10px;
+}
+.esp_titulo{
+    color: black;
+    font-weight: 1;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .cirugia {
     padding: 30px;
 }
+.cir_img{
+    height: 225px;
+    padding-top: 20px;
+    margin-bottom: 27px;
+    margin-left: 24px;
+}
+.cir_titulo{
+    color: black;
+    padding-left: 30px;
+    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+}
 
 .btn-consulta-inicio {
     font-size: 1rem;
     color: white;
-    border-radius: 15px;
+    border-radius: 25px;
     padding: 10px 20px;
     background-color: transparent;
     background-repeat: no-repeat;
-    border: 2px solid white;
+    border: 3px solid white;
     cursor: pointer;
     overflow: hidden;
     outline: none;
+    margin-top: 10px;
 }
 
 .btn-consulta-inicio:hover {
     background-color: grey;
 }
 
-.titulo_secundario {
-    margin-top: 20px;
+.titulo_secundario_inicio {
+    margin-top: 40px;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-style: italic;
 }
