--- a/src/Components/Publico/Inicio.css
+++ b/src/Components/Publico/Inicio.css
@@ -96,6 +96,7 @@
 
 .titulo_secundario_inicio {
     margin-top: 40px;
+    margin-left: 40px;
     font-size: 50px;
     font-weight: bold;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
