--- a/src/Components/ManejoUsuarios/Login.css
+++ b/src/Components/ManejoUsuarios/Login.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 /* efectos por defecto */
 body {
     font-weight: normal;
@@ -5,6 +6,7 @@ body {
     color: #1b262c;
     margin: 0;
     background-color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* efectos para el contenedor de pantalla completa */
@@ -35,6 +37,12 @@ body {
     border-radius: 10px;
 }
 
+#loginform {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 #login label {
     font-size: 120%;
     color: #3c4245;
@@ -58,58 +66,43 @@ body {
     border-radius: 10px;
 }
 
-#login input::placeholder {
-    color: black;
+.log{
+    margin-bottom: 20px;
 }
 
 #login button {
     font-size: 110%;
-    color: #1b262c;
+    color: white;
     width: 100%;
     height: 40px;
-
-    border-radius: 10px;
-
-    background-color: rgb(223, 219, 219);
-
+    border-radius: 20px;
+    background-color: rgb(193, 130, 193);
+    -webkit-text-stroke: 1px white;
     margin-top: 10px;
+    border: none;
 }
 
 #login button:hover {
-    background-color: #3c4245;
+    background-color:purple;
     color: #dfcdc3;
 }
 
-.titulo {
-    font-size: 300%;
-    color: #dfcdc3;
-}
-
-.logo-empresa img {
-    width: 60%;
-}
-
-hr {
-    border-top: 1px solid #8c8b8b;
-    border-bottom: 1px solid #dfcdc3;
-
-}
-
-.pie-form {
-    font-size: 90%;
-    text-align: center;
-    margin-top: 15px;
-}
-
-.pie-form a {
-    display: block;
+.log1{
     text-decoration: none;
-    color: #dfcdc3;
-    margin-bottom: 3px;
+    align-self: center;
+    color: black;
 }
 
-.pie-form a:hover {
-    color: #719192;
+#cont {
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.titulo_login {
+    font-size: 35px;
+    font-weight: bold;
+    font-style: italic;
 }
 
 /* seccion de la derecha */
