--- a/src/Components/Adopciones/Adopcion.css
+++ b/src/Components/Adopciones/Adopcion.css
@@ -17,11 +17,21 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 80vh;
+  min-height: 80vh;
 }
 
 .tarjeta {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid lightgray;
+  box-shadow: 2px 2px 8px 4px #d3d3d3d1;
+  border-radius: 15px;
+  align-items: center;
+  justify-content: center;
+  margin: 0 10px;
+  padding: 0;
+  height: auto;
   margin-top: 30px;
   padding: 10px;
-  width: 30%;
 }
