--- a/src/Components/Turnos/Calendario.css
+++ b/src/Components/Turnos/Calendario.css
@@ -21,7 +21,7 @@
 
 .btn-calendario{
   width: 40px;
-  height: 30px;
+  height: 50px;
   border: none;
   color: black;
   text-align: center;
@@ -30,5 +30,6 @@
   font-size: 16px;
 }
 .btn-calendario:hover {
-    box-shadow: 3px 3px grey;
+    box-shadow: 0px 0px 7px 0px #000000;
+    border: 1px solid lightgray;
 }
