--- a/src/Components/ManejoUsuarios/Login.css
+++ b/src/Components/ManejoUsuarios/Login.css
@@ -72,14 +72,17 @@ body {
 
 #login button {
     font-size: 110%;
-    color: white;
     width: 100%;
     height: 40px;
-    border-radius: 20px;
-    background-color: rgb(193, 130, 193);
-    -webkit-text-stroke: 1px white;
-    margin-top: 10px;
-    border: none;
+    color: purple;
+    border-radius: 30px;
+    border: 3px solid purple;
+    background-color: white;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 #login button:hover {
