--- a/src/Components/ManejoUsuarios/Registro.css
+++ b/src/Components/ManejoUsuarios/Registro.css
@@ -74,15 +74,18 @@ body {
 
 #registroform button {
   font-size: 110%;
-  color: white;
   width: 100%;
   height: 40px;
-  border-radius: 20px;
-  background-color: rgb(193, 130, 193);
-  -webkit-text-stroke: 1px white;
-  margin-top: 20px;
-  border: none;
-  margin-bottom: 20px;
+  color: purple;
+  border-radius: 30px;
+  border: 3px solid purple;
+  background-color: white;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
+  font-weight: bold;
+  text-decoration: none;
+  margin: 20px 0;
 }
 
 #registroform button:hover {
