--- a/src/Components/Publico/Consultas.css
+++ b/src/Components/Publico/Consultas.css
@@ -87,13 +87,18 @@
 }
 
 .btn-consulta {
-    color: black;
-    font-size: 1.2rem;
-    padding: 10px 25px;
-    border: 1px solid rgb(170, 169, 169);
-    border-radius: 10px;
-    cursor: pointer;
+    font-size: 110%;
+    width: 20%;
+    height: 40px;
+    color: purple;
+    border-radius: 30px;
+    border: 3px solid purple;
     background-color: white;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    font-weight: bold;
+    text-decoration: none;
 
 }
 
