--- a/src/Components/Turnos/AgendarTurno.css
+++ b/src/Components/Turnos/AgendarTurno.css
@@ -26,3 +26,11 @@
     margin: 20px;
     width: 30%;
 }
+
+.btn:hover{
+    background-color: rgb(141, 65, 141);
+    border-radius: 15px;
+    padding: 10px;
+    border: 1px solid lightgray;
+    color: white;
+}
